More tests and better quality